crates/biome_cli/tests/snapshots/main_commands_format/formatter_fix.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --fix format.js
```

## `format.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
