crates/biome_cli/tests/snapshots/main_commands_format/fs_error_read_only.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.js
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - test.js
  


```

# Emitted Messages

```block
test.js internalError/io  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × cannot acquire write access to file in read-only filesystem
  
  ! This diagnostic was derived from an internal Biome error. Potential bug, please report it if necessary.
  

```

```block
Formatted 1 file in <TIME>. No fixes applied.
```
