crates/biome_cli/tests/snapshots/main_commands_format/html_enabled_by_arg_format.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --html-formatter-enabled=true --write file.html
```

## `file.html`

```html
<!doctype html>

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
