crates/biome_cli/tests/snapshots/main_commands_format/html_enabled_by_default.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.html`

```html
<!DOCTYPE html>

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
