crates/biome_cli/tests/snapshots/main_commands_format/ignore_comments_error_when_allow_comments.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format somefile.json
```

## `biome.json`

```json
{
  "json": {
    "parser": { "allowComments": true }
  }
}
```

## `somefile.json`

```json

/*test*/ [1, 2, 3]
	
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
somefile.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2 1 │   /*test*/ [1, 2, 3]
    3   │ - → 
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
